--- a/style.css
+++ b/style.css
@@ -37,20 +37,26 @@ h1 {
     margin: 10px 10px;
     position: relative;
 }
-
-.frente,
-.verso {
+.verso{
+    width: 50px;
+    height: 50px;
+    background-color: #A7E9AF;
+    backface-visibility: hidden;
+    
+}
+.frente
+{
     width: 100px;
     height: 100px;
-    padding: 15px;
+    padding: 20px;
     position: absolute;
-    background-color: #A7E9AF; 
+    background-color: #A7E9AF;
     backface-visibility: hidden;
-    transition: all 2s;
+    transition: transform 1s;
     transform-style: preserve-3d;
 }
 
 
-.virar .frente{
+.virar .frente {
     transform: rotateY(180deg);
 }
