--- a/style.css
+++ b/style.css
@@ -18,14 +18,17 @@ h1 {
     text-align: center;
     margin: 40px 0;
 }
-.contador {
+
+.contador,
+.cronometro {
     font-weight: 700;
     font-size: 30px;
     line-height: 66px;
     letter-spacing: -0.004em;
     color: #75B79E;
     text-align: center;
-    margin: 20px 0;
+    margin: 5px 0;
+    padding: 0;
 }
 
 .jogo {
@@ -46,15 +49,16 @@ h1 {
     margin: 10px 10px;
     position: relative;
 }
-.verso{
+
+.verso {
     width: 50px;
     height: 50px;
     background-color: #A7E9AF;
     backface-visibility: hidden;
-    
+
 }
-.frente
-{
+
+.frente {
     width: 100px;
     height: 100px;
     padding: 20px;
@@ -66,10 +70,9 @@ h1 {
 }
 
 
-.virar  .frente {
+.virar .frente {
     transform: rotateY(180deg);
 }
-/* .certo .frente{
-    transform: rotateY(180deg);
+span{
+    margin: 0;
 }
- */
