--- a/style.css
+++ b/style.css
@@ -16,18 +16,18 @@ h1 {
     letter-spacing: -0.004em;
     color: #75B79E;
     text-align: center;
-    margin: 40px 0;
+    margin: 20px 0;
 }
 
 .contador,
 .cronometro {
     font-weight: 700;
-    font-size: 30px;
+    font-size: 15px;
     line-height: 66px;
     letter-spacing: -0.004em;
     color: #75B79E;
     text-align: center;
-    margin: 5px 0;
+    margin: 0;
     padding: 0;
 }
 
@@ -75,4 +75,10 @@ h1 {
 }
 span{
     margin: 0;
+}
+.escondido {
+    display:none;
+}
+@media (min-width: 614px){
+    
 }
