--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 .jogo {
-    padding: 0 122px;
+    padding: 0 120px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -48,18 +48,16 @@ h1 {
     justify-content: center;
     margin: 10px 10px;
     position: relative;
-    
-}
-
-.verso {
-    width: 50px;
-    height: 50px;
-    background-color: #A7E9AF;
-    backface-visibility: hidden;
 
 }
+
 
 .frente {
+    z-index: 1;
+}
+
+.frente,
+.verso {
     width: 100px;
     height: 100px;
     padding: 20px;
@@ -83,13 +81,17 @@ span {
     display: none;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
 
     .jogo {
         margin: 0 auto;
-        
+        display: block;
+        align-items: center;
+
     }
-    .frente, .verso {
+
+    .frente,
+    .verso {
         width: 100%;
     }
 }
